--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="test/|test/" kind="src" path="src"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/jverson/Downloads/cglib-3.2.5.jar"/>
-	<classpathentry kind="lib" path="/Users/jverson/Downloads/asm-5.1.jar"/>
+	<classpathentry kind="lib" path="D:/Downloads/dev/repository/com/google/guava/guava/14.0.1/guava-14.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/Downloads/dev/repository/com/google/guava/guava/14.0.1/guava-14.0.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="D:/Downloads/dev/repository/com/google/guava/guava/14.0.1/guava-14.0.1-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
